tests/expected_invalid_public_state_private_payload.diag.out
<input>:7:21: error: public API cannot reference private type 'Hidden'
        Loaded { value: Hidden },
                        ^^^^^^
